--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -49,8 +49,8 @@
   --vp-c-default-3: var(--vp-c-gray-3);
   --vp-c-default-soft: var(--vp-c-gray-soft);
 
-  --vp-c-brand-1: var(--vp-c-indigo-1);
-  --vp-c-brand-2: var(--vp-c-indigo-2);
+  --vp-c-brand-1: #8cc540;
+  --vp-c-brand-2: #282560;
   --vp-c-brand-3: var(--vp-c-indigo-3);
   --vp-c-brand-soft: var(--vp-c-indigo-soft);
 
@@ -94,8 +94,8 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
-    #bd34fe 30%,
-    #41d1ff
+    var(--vp-c-brand-1) 30%,
+    var(--vp-c-brand-2)
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
